force-app/main/default/objects/Event_Participant__c/Event_Participant__c.object-meta.xml
<CustomObject>
    <description>Junction linking Contact to Event with Role (Speaker, Volunteer, Organizer, etc.)</description>
    <label>Event Participant</label>
    <nameField>
        <label>Event Participant Name</label>
        <type>AutoNumber</type>
        <displayFormat>EP-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Event Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>