force-app/main/default/objects/Event_Participant__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Event this participation refers to</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Participants</relationshipLabel>
    <relationshipName>Event_Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>