force-app/main/default/objects/Event_Participant__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Organizer</fullName>
            </value>
            <value>
                <fullName>Panelist</fullName>
            </value>
            <value>
                <fullName>Moderator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>